version bump to 0.1.13 and fixed layout issues.

--- a/stylesheets/slippy-pure-big-font.css
+++ b/stylesheets/slippy-pure-big-font.css
@@ -160,7 +160,7 @@ p {
 }
 
 .slide .description {
-  width: 550px;
+  width: 500px;
 }
 
 ol, ul {
